--- a/pages/home.html
+++ b/pages/home.html
@@ -8,5 +8,7 @@
 <body>
     <h1>THIS IS THE HOMEPAGE</h1>
     <h2>JOHN DOE</h2>
-</body>
+    <a href="http://localhost:9000\">HOME</a>
+    <a href="http://localhost:9000\about">ABOUT</a>
+    <a href="http://localhost:9000\contact">CONTACT</a>
 </html>
